<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    tools:context=".QuizQuestionsActivity">

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:text="@string/text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/ivFlag"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_flag_of_argentina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/llProgressDetails"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/pb"
                android:layout_weight="1"
                android:max="10"
                android:minHeight="50dp"
                android:progress="0"
                android:indeterminate="false"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvProgress"
                android:gravity="center"
                android:padding="15dp"
                android:textColorHint="@color/hint"
                android:textSize="14sp"
                android:text="@string/holder_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvOptionOne"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:text="@string/quiz_option_holder"
            android:background="@drawable/default_option_border_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvOptionTwo"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:text="@string/quiz_option_holder"
            android:background="@drawable/default_option_border_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvOptionThree"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:text="@string/quiz_option_holder"
            android:background="@drawable/default_option_border_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvOptionFour"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:text="@string/quiz_option_holder"
            android:background="@drawable/default_option_border_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btSubmit"
            android:text="@string/bt_quiz"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>